--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.11",
+    "csv-parse": "^5.6.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
-  },
-  "dependencies": {
-    "csv-parse": "^5.6.0"
   }
 }
