add script to show verbose test results

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "reposit",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:verbose": "jest --verbose"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
