--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "csv-parse": "^5.6.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "zod": "^3.24.2"
   }
 }
